--- a/llm_config.ini
+++ b/llm_config.ini
@@ -11,3 +11,16 @@ max_tokens = 4096
 frequency_penalty = 0.2
 presence_penalty = 0
 stop_tokens = <|eot_id|>
+
+[VLLM]
+gpu = 4,5,6,7
+max_model_len = 8192
+
+[PARAMS]
+temperature = 0
+top_p = 1
+top_k = 1
+max_tokens = 4096
+frequency_penalty = 0.2
+presence_penalty = 0
+stop_tokens = <|eot_id|>
